--- a/frontend/src/pages/blog.module.css
+++ b/frontend/src/pages/blog.module.css
@@ -3,9 +3,17 @@
 }
 
 .message {
+  position: fixed;
+  top: 4rem;
+  left: 0;
+  right: 0;
   padding: 0.5rem 1rem;
-  margin: 1rem;
+  margin: 0 2rem;
+  width: auto;
+
+  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.25);
+  border: 0.1rem solid rgb(0, 180, 0);
   border-radius: 0.5rem;
-  background-color: green;
+  background-color: rgb(0, 200, 0);
   color: white;
 }
