--- a/frontend/src/pages/blog.module.css
+++ b/frontend/src/pages/blog.module.css
@@ -1,9 +1,14 @@
+.wrapper {
+  padding: 3rem;
+}
+
 .stack > * + * {
   margin-top: 1rem;
 }
 
 .message {
   position: fixed;
+  z-index: 1;
   top: 4rem;
   left: 0;
   right: 0;
