--- a/frontend/src/pages/blog.module.css
+++ b/frontend/src/pages/blog.module.css
@@ -22,3 +22,19 @@
   background-color: rgb(0, 200, 0);
   color: white;
 }
+
+.image {
+  display: flex;
+  width: 10rem;
+  height: 10rem;
+  justify-content: center;
+  align-items: center;
+
+  object-fit: contain;
+  border: 0.1rem solid;
+  border-radius: 0.5rem;
+}
+
+.label {
+  padding-bottom: 0.2rem;
+}
