--- a/frontend/src/components/Spinner.module.css
+++ b/frontend/src/components/Spinner.module.css
@@ -5,7 +5,6 @@
   width: 80px;
   height: 80px;
   margin: 0 auto;
-  margin-top: 7rem;
 }
 .lds-spinner div {
   transform-origin: 40px 40px;
@@ -17,9 +16,9 @@
   position: absolute;
   top: 3px;
   left: 37px;
-  width: 6px;
-  height: 18px;
-  border-radius: 20%;
+  width: 2px;
+  height: 23px;
+  border-radius: 999px;
   background: currentColor;
 }
 .lds-spinner div:nth-child(1) {
